syntax = "proto3";

package auth;

message User {
  string id = 1;
  string email = 2;
  string password = 3;
}

message LoginUserRequest{
  string email = 1;
  string password = 2;
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
  int32 YOB = 4;
  string role = 5;
}

message Token {
  string accessToken = 1;
  string refreshToken = 2;
}

message LoginUserResponse{
  bool success = 1;
  string message = 2;
  Token data = 3;
  repeated string errors = 4;
}

message CreateUserResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
  repeated string errors = 4;
}

message UsersResponse {
  bool success = 1;
  string message = 2;
  repeated User data = 3;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshToken{
  string accessToken = 1;
}

message ResfreshTokenResponse {
  bool success = 1;
  string message = 2;
  RefreshToken data = 3;
  repeated string errors = 4;
}

message ChangePasswordRequest {
  string accountId = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message ChangePasswordResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
  repeated string errors = 4;
}

message RegisterUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
  int32 YOB = 4;  
}

message RegisterUserResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
  repeated string errors = 4;
}

message ResetPasswordRequest {
  string email = 1;
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
  repeated string errors = 4;
}

message VerifyOtpRequest {
  string email = 1;
  string otp = 2;
}

service AuthService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (ResfreshTokenResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc Register(RegisterUserRequest) returns (RegisterUserResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc VerifyOtp(VerifyOtpRequest) returns (ResetPasswordResponse);
}

message Empty {}
