syntax = "proto3";

package inventory;

service InventoryService {
  // Warehouse
  rpc CreateWarehouse (CreateWarehouseDto) returns (WarehouseResponse);
  rpc UpdateWarehouse (UpdateWarehouseDto) returns (WarehouseResponse);
  rpc GetWarehouse (GetWarehouseDto) returns (WarehouseResponse);
  rpc ListWarehouses (ListWarehousesDto) returns (ListWarehousesResponse);
  rpc DeleteWarehouse (DeleteWarehouseDto) returns (DeleteResponse);

  // Zone
  rpc CreateZone (CreateZoneDto) returns (ZoneResponse);
  rpc UpdateZone (UpdateZoneDto) returns (ZoneResponse);
  rpc DeleteZone (DeleteZoneDto) returns (DeleteResponse);
  rpc ListZones (ListZonesDto) returns (ListZonesResponse);

  // Rack
  rpc CreateRack (CreateRackDto) returns (RackResponse);
  rpc UpdateRack (UpdateRackDto) returns (RackResponse);
  rpc DeleteRack (DeleteRackDto) returns (DeleteResponse);
  rpc ListRacks (ListRacksDto) returns (ListRacksResponse);

  // Bin
  rpc CreateBin (CreateBinDto) returns (BinResponse);
  rpc UpdateBin (UpdateBinDto) returns (BinResponse);
  rpc DeleteBin (DeleteBinDto) returns (DeleteResponse);
  rpc ListBins (ListBinsDto) returns (ListBinsResponse);

  // Stock
  rpc GetStockLevel (GetStockLevelDto) returns (StockLevelResponse);
  rpc AdjustStock (AdjustStockDto) returns (StockLevelResponse);
}

// Common
message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message Pagination {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
  int32 totalPages = 4;
}

// Warehouse Messages
message Warehouse {
  string id = 1;
  string name = 2;
  string location = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message CreateWarehouseDto {
  string name = 1;
  string location = 2;
}

message UpdateWarehouseDto {
  string id = 1;
  string name = 2;
  string location = 3;
}

message GetWarehouseDto {
  string id = 1;
}

message DeleteWarehouseDto {
  string id = 1;
}

message WarehouseResponse {
  Warehouse warehouse = 1;
  string message = 2;
}

message ListWarehousesDto {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message ListWarehousesResponse {
  repeated Warehouse warehouses = 1;
  Pagination meta = 2;
  string message = 3;
}

// Zone Messages
message Zone {
  string id = 1;
  string wareHouseId = 2;
  string name = 3;
  string type = 4; // STANDARD, SECURE, HAZARD
  string createdAt = 5;
  string updatedAt = 6;
}

message CreateZoneDto {
  string wareHouseId = 1;
  string name = 2;
  string type = 3;
}

message UpdateZoneDto {
  string id = 1;
  string name = 2;
  string type = 3;
}

message DeleteZoneDto {
  string id = 1;
}

message ZoneResponse {
  Zone zone = 1;
  string message = 2;
}

message ListZonesDto {
  string wareHouseId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListZonesResponse {
  repeated Zone zones = 1;
  Pagination meta = 2;
  string message = 3;
}

// Rack Messages
message Rack {
  string id = 1;
  string zoneId = 2;
  string code = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message CreateRackDto {
  string zoneId = 1;
  string code = 2;
}

message UpdateRackDto {
  string id = 1;
  string code = 2;
}

message DeleteRackDto {
  string id = 1;
}

message RackResponse {
  Rack rack = 1;
  string message = 2;
}

message ListRacksDto {
  string zoneId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListRacksResponse {
  repeated Rack racks = 1;
  Pagination meta = 2;
  string message = 3;
}

// Bin Messages
message Bin {
  string id = 1;
  string rackId = 2;
  string code = 3;
  int32 xCoord = 4;
  int32 yCoord = 5;
  double maxWeight = 6;
  double maxVolume = 7;
  double currWeight = 8;
  double currVolume = 9;
  string createdAt = 10;
  string updatedAt = 11;
}

message CreateBinDto {
  string rackId = 1;
  string code = 2;
  int32 xCoord = 3;
  int32 yCoord = 4;
  double maxWeight = 5;
  double maxVolume = 6;
}

message UpdateBinDto {
  string id = 1;
  string code = 2;
  int32 xCoord = 3;
  int32 yCoord = 4;
  double maxWeight = 5;
  double maxVolume = 6;
}

message DeleteBinDto {
  string id = 1;
}

message BinResponse {
  Bin bin = 1;
  string message = 2;
}

message ListBinsDto {
  string rackId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListBinsResponse {
  repeated Bin bins = 1;
  Pagination meta = 2;
  string message = 3;
}

// Stock Messages
message GetStockLevelDto {
  string productId = 1;
  string warehouseId = 2; // Optional, if empty check all
}

message StockLevelResponse {
  string productId = 1;
  int32 totalQuantity = 2;
  repeated BinItemDetail details = 3;
}

message BinItemDetail {
  string binId = 1;
  string binCode = 2;
  int32 quantity = 3;
}

message AdjustStockDto {
  string binId = 1;
  string productId = 2;
  int32 quantityChange = 3; // Positive to add, negative to remove
  string reason = 4;
}
